--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -5,6 +5,31 @@
     padding-bottom: auto;
 }
 
+.registeredStye{
+    background-color:rgb(255, 255, 255); 
+    border-radius: 2%;
+    padding-top: 2%;
+    padding-left: 2%;
+    padding-right: 2%;
+    border: 2px;
+}
+
+.style_selection{
+    width:"165px"; 
+    background-color:'white';
+    border:'0px'
+}
+
+
+.logInStye{
+    background-color:rgb(255, 255, 255); 
+    border-radius: 2%;
+    padding-top:0px;
+    padding-left: 2%;
+    padding-right: 2%;
+    border: 2px;
+}
+
 @media screen and (min-width: 1000px){
 
     .position_sticky{
