--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -4,13 +4,14 @@
     padding-right:1%;
 }
 
+
 .style_css{
     height: max-content;
     padding-bottom: auto;
 }
 
 .registeredStye{
-    background-color:rgb(255, 255, 255); 
+    background-color:rgb(255, 255, 255); background-color:rgba(123, 147, 201, 0.53); 
     border-radius: 2%;
     padding-top: 2%;
     padding-left: 2%;
