--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -4,14 +4,21 @@
     padding-right:1%;
 }
 
+.n_link{
+    color:rgb(209, 134, 134) ;
+}
+
 
 .style_css{
+    
     height: max-content;
     padding-bottom: auto;
 }
 
 .registeredStye{
-    background-color:rgb(255, 255, 255); background-color:rgba(123, 147, 201, 0.53); 
+
+    background-color: rgba(169, 181, 210, 0.53); 
+
     border-radius: 2%;
     padding-top: 2%;
     padding-left: 2%;
@@ -27,7 +34,7 @@
 
 
 .logInStye{
-    background-color:rgb(255, 255, 255); 
+    background-color:rgba(169, 181, 210, 0.53);  
     border-radius: 2%;
     padding-top:0px;
     padding-left: 2%;
