--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -1,5 +1,9 @@
 /** grand  ecran **/
-.spacing_d{
+.Card-space{
+    padding: 2px !important;
+    border: 0px;
+}
+.spacing_d{ 
     padding-left: 0%;
     padding-right:1%;
 }
@@ -16,14 +20,12 @@
 }
 
 .registeredStye{
-
     background-color: rgba(169, 181, 210, 0.53); 
-
     border-radius: 2%;
     padding-top: 2%;
     padding-left: 2%;
     padding-right: 2%;
-    border: 2px;
+    border: 0px;
 }
 
 .style_selection{
@@ -36,10 +38,10 @@
 .logInStye{
     background-color:rgba(169, 181, 210, 0.53);  
     border-radius: 2%;
-    padding-top:0px;
+    padding-top:-2px;
     padding-left: 2%;
     padding-right: 2%;
-    border: 2px;
+    border: 0px;
 }
 
 @media screen and (min-width: 1000px){
