--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -1,7 +1,12 @@
 /** grand  ecran **/
+.header_{
+    box-shadow:1px 1px 1px 1px rgba(1, 1, 70, 0.2);
+}
+
 .Card-space{
     padding: 2px !important;
     border: 0px;
+    box-shadow:2px 2px 2px 2px rgba(1, 1, 70, 0.2);
 }
 .spacing_d{ 
     padding-left: 0%;
@@ -20,12 +25,13 @@
 }
 
 .registeredStye{
-    background-color: rgba(169, 181, 210, 0.53); 
+    background-color:rgb(255, 255, 255);  
     border-radius: 2%;
     padding-top: 2%;
     padding-left: 2%;
     padding-right: 2%;
     border: 0px;
+    box-shadow:2px 2px 2px 2px rgba(2, 2, 255, .2);
 }
 
 .style_selection{
@@ -36,12 +42,13 @@
 
 
 .logInStye{
-    background-color:rgba(169, 181, 210, 0.53);  
+    background-color:rgb(255, 255, 255);  
     border-radius: 2%;
     padding-top:-2px;
     padding-left: 2%;
     padding-right: 2%;
     border: 0px;
+    box-shadow:2px 2px 2px 2px rgba(2, 2, 255, .2);
 }
 
 @media screen and (min-width: 1000px){
