--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -3,10 +3,6 @@
     box-shadow:1px 1px 1px 1px rgba(1, 1, 70, 0.2);
 }
 
-.Card-space + .Card-space{
-  margin-left: 10px !important;
-  margin-right: 10px !important;
-}
 
 .Card-space{
     padding: 2px !important;
@@ -22,12 +18,6 @@
     color:rgb(209, 134, 134) ;
 }
 
-
-.style_css{
-    
-    height: max-content;
-    padding-bottom: auto;
-}
 
 .registeredStye{
     background-color:rgb(255, 255, 255);  
@@ -182,7 +172,22 @@
 /** fin grand  ecran **/
 
 /** Petit ecran **/
-@media screen and (max-width: 2000px ){
+@media screen and (max-width: 1000px ){
+
+    li  ~ nav {
+        width: 120%;
+    }
+
+    .style_css{
+        height:0% !important;
+        display: flex;
+        flex-direction: row-reverse;
+        width: 100% !important;
+        margin-left:10px;
+        background-color: rgb(255, 255, 255);
+        z-index: 20;
+        position: -webkit-sticky, static !important;;
+    }
 
     .box > input{
 
