--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -1,1112 +1,106 @@
 /** grand  ecran **/
-.header_{
-    box-shadow:1px 1px 1px 1px rgba(1, 1, 70, 0.2);
-}
-
-
-.Card-space{
-    padding: 2px !important;
-    border: 0px;
-    box-shadow:2px 2px 2px 2px rgba(1, 1, 70, 0.2);
-}
-.spacing_d{ 
-    padding-left: 0%;
-    padding-right:1%;
-}
-
-.n_link{
-    color:rgb(209, 134, 134) ;
-}
-
-
-.registeredStye{
-    background-color:rgb(255, 255, 255);  
-    border-radius: 2%;
-    padding-top: 2%;
-    padding-left: 2%;
-    padding-right: 2%;
-    border: 0px;
-    box-shadow:2px 2px 2px 2px rgba(2, 2, 255, .2);
-}
-
-.style_selection{
-    width:"165px"; 
-    background-color:'white';
-    border:'0px'
-}
-
-
-.logInStye{
-    background-color:rgb(255, 255, 255);  
-    border-radius: 2%;
-    padding-top:-2px;
-    padding-left: 2%;
-    padding-right: 2%;
-    border: 0px;
-    box-shadow:2px 2px 2px 2px rgba(2, 2, 255, .2);
-}
-
 @media screen and (min-width: 1000px){
-
-    .position_sticky{
-        position: -webkit-sticky;
-        position: sticky !important;
-        top:15px;
-        z-index:-2;
+    .header_{
+        box-shadow:1px 1px 1px 1px rgba(1, 1, 70, 0.2);
     }
 
-    .NavLink3 {
-        justify-content: center;
-        text-align: center;
-        padding-top: auto;
+    .flex-row + .class_pad{
+        margin-left: 20% !important;
+        position: inherit;
     }
 
-    .box > input{
-
-        flex: 1;
-
-        height: 40px;
-
-        border: none;
-
-        outline: none;
-
-        font-size: medium;
-
-        text-align:center;
-
-        padding-left: 10px;
-
-        margin-left:5%;
-
-        background-color:#f2f2f2;
-
-        border-style:none
-    }
-    .NavLink3 {
-
-        justify-content: center;
-        text-align: center;
-        padding-top: auto;
-      }
-
-    .p_link2{
-        opacity: 1 !important;
-        padding-top: 10px;
-        padding-bottom: 10px;
-        margin-bottom: 0px;
-        margin-top: 0px;
-    }
-
-    .p_link2:active{
-        padding-top: 10px;
-        padding-bottom: 10px;
-        margin-bottom: 0px;
-        margin-top: 0px;
-    }
-
-    .monTitre{
-       text-align: center !important;
+    .vert_menu_footer  .class_footer{
+        padding-left:15% !important;
     }
 
 
-    .imgDim{
-        width:330px ;
-        height:400px
-    }
-    .popStyle{
-      display: flex;
-      flex-direction: row;
-    }
 
-    .navbar-item.active{
-        margin-bottom:auto !important;
-    }
-
-     .navbar-item{
-        margin-bottom:4px !important;
+    .style_css{
+        z-index: 100;
+        width: 200px;
+        height: 100%;
+        background-color:white;
+        position:fixed;
+        top: 0px;
+        bottom: 0px;
+        padding-top:30px;
     }
 
-    .NavLink{
-      color: rgb(39, 37, 37) !important;
-      font-size: small;
-    }
-
-    .param{
-        width:50% !important;
-    }
-
-    .NavLink:hover{
-      background-color: grey !important;
-      color: #F0F8FF !important;
-
-    }
-
-    .active{
-      border-bottom: 4px solid #61dafb;
-      padding-left:auto;
-      padding-right:auto;
-      padding-bottom: auto;
-      padding-top: auto;
-    }
-
-    .montruc{
-        transform:scale(0.7);
-    }
-
-    .orientation{
-        display: flex;
-        direction:flex-row;
-    }
-
-    .p_dix{
-        width: 0.5px !important;
-        height: 0.5px !important;
-        opacity: 0 !important;
-        color: gray;
-        padding-top:0px ;
+    .style_css + .class_pad{
+        margin-left: 12% !important;
+        position: inherit;
     }
 
 
+    .Card-space{
+        padding: 2px !important;
+        border: 0px;
+        box-shadow:2px 2px 2px 2px rgba(1, 1, 70, 0.2);
+    }
+    .spacing_d{ 
+        padding-left: 0%;
+        padding-right:1%;
+    }
+
+    .n_link{
+        color:rgb(209, 134, 134) ;
+    }
+
+
+    .registeredStye{
+        background-color:rgb(255, 255, 255);  
+        border-radius: 2%;
+        padding-top: 2%;
+        padding-left: 2%;
+        padding-right: 2%;
+        border: 0px;
+        box-shadow:2px 2px 2px 2px rgba(2, 2, 255, .2);
+    }
+
+    .style_selection{
+        width: 165px;; 
+        background-color:white;
+        border:0px;
+    }
+
+
+    .logInStye{
+        background-color:rgb(255, 255, 255);  
+        border-radius: 2%;
+        padding-top:-2px;
+        padding-left: 2%;
+        padding-right: 2%;
+        border: 0px;
+        box-shadow:2px 2px 2px 2px rgba(2, 2, 255, .2);
+    }
 }
 /** fin grand  ecran **/
 
 /** Petit ecran **/
 @media screen and (max-width: 1000px ){
 
-    li  ~ nav {
-        width: 120%;
+    .class_d{
+        width: 100%;
+        background-color: #171212;
     }
 
     .style_css{
+        text-align: center !important;
         height:0% !important;
         display: flex;
-        flex-direction: row-reverse;
-        width: 100% !important;
-        margin-left:10px;
-        background-color: rgb(255, 255, 255);
-        z-index: 20;
-        position: -webkit-sticky, static !important;;
-    }
-
-    .box > input{
-
-        flex: 1;
-
-        height: 40px;
-
-        border: none;
-
-        outline: none;
-
-        font-size: medium;
-
-        text-align:center;
-
-        padding-left: 10px;
-
-        background-color:#f2f2f2
-
-    }
-
-    .monBtnEsp{
-        margin-right: 23px;
-    }
-
-    .p_link2{
-        opacity: 0;
-    }
-
-    .s_contact + .s_contact{
-        padding-left: auto;
-    }
-
-    .NavLink3 {
-
-    justify-content: center;
-    text-align: center;
-    padding-top: auto;
-    }
-
-    .t-header {
-        margin-top: 0;
-        margin-bottom: 0;
-    }
-
-    .m_flex {
-        padding-bottom: 0px !important;
-        position: sticky-top;
-        position: -webkit-sticky; /* Safari */
-    }
-
-    .rmd{
-        justify-content: center;
+        flex-direction: row;
+        z-index:1 !important;
         text-align: center;
-        padding-bottom: 5%;
-        padding-top: 2%;
+        padding-top: 10px;
+        padding-left: 1%;
     }
 
-    .imgDim{
-        width:0px ;
-        height:0px
+    .style_head + .vert_menu_footer{
+        padding-top: 12%;
     }
 
-    .maTitre{
-        text-align:center;
-
+    .code_u{
+        background-color: rgb(251, 251, 251) !important;
     }
 
-
-
-
-    .popStyle{
-      display: flex;
-      flex-direction: column-reverse;
-      margin-bottom:0px;
-    }
-
-    .orientation{
-        display: flex;
-        direction:flex-column ;
-    }
-
-    .dd{
-        display: flex;
-        direction:flex-column;
-        padding-left: 23px;
-    }
-
-    .p-search{
-        width: auto;
-        margin:0px;
-    }
-
-
-    .search {
-        width:300% !important;
-    }
-
-    .t-header{
-        margin-top:0%;
-        margin-left:80%;
-    }
-
-    .navbar-item + .navbar-item {
-        margin-top:1px ;
-    }
-
-
-    .NavLink2.active{
-        color:rgb(48, 90, 81) !important;
-        border-bottom: 4px solid rgb(53, 55, 156) ;
-
-    }
-
-    .NavLink2{
-        border-bottom: 4px solid white;
-
-    }
-
-    .NavLink2:hover{
-        color:rgb(54, 48, 90) !important;
-        border-bottom: 4px solid rgb(29, 11, 94) ;
-
-    }
-
-    .NavLink3.active{
-        color:rgb(7, 9, 131) !important;
-        border-bottom: 4px solid #61dafb;
-        border-right: 0px;
-        padding-bottom: 5px;
-
-
-    }
-
-    .NavLink3{
-       color: #595959  !important;
-       font-size:bold;
-    }
-
-    .monHeader{
-        display:position;
-    }
-
-    .navbar-toggle{
-        padding-top:30px;
-         margin-right:23px !important;
-    }
-
-
-    .p_dix{
-        opacity: 1;
-        margin-bottom:4px ;
-    }
-
-    .m_flex{
-        display: flex;
-
-    }
-
-    .p_link{
-        height: 0px;
-        opacity: 0;
-    }
 }
-/** Fin du petit ecran   **/
-
-/** Fin des formats """""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""""" **/
-
-
-body{
-    background-color:   #f2f2f2;
-    background-attachment: fixed;
-}
-
-footer{
-    background-attachment: fixed;
-    color:white;
-}
-
-.popStyle{
-    margin-bottom:0px;
-    padding:12px
-}
-
-.monFontSize{
-    font-family: sans-serif;
-    font-size: 15px;
-}
-
-
-/* width */
-::-webkit-scrollbar {
-    width: 5px;
-}
-
-.CardFlottant{
-    background:white;
-    color:white;
-    z-index:2;
-    margin-bottom:30%;
-    position:fixed;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 5px grey;
-    border-radius: 2px;
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-    background: white;
-    border-radius: 10px;
-}
-
-
-.scroll-page {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    font-size: 5em;
-}
-
-
-.passe-oublie:hover{
-    color:green;
-}
-.passe-oublie{
-    color:grey;
-}
-.bll{
-    border-top:0px !important;
-    border-left:0px !important;
-}
-
-/** Mon settings **/
-
-.monfieldset{
-    border:1px ;
-    padding:20px;
-    box-shadow: inset 0 -3em 3em rgba(0,0,0,0.03),
-             0 0  0 2px rgb(255,255,255),
-             0.3em 0.3em 1em rgba(0,0,0,0.1);
-}
-
-.legende{
-    background-color:blue;
-    width:auto;
-    padding:10px ;
-}
-
-
-.mmm{
-    color:rgb(22, 18, 18);
-    font-size:medium;
-    font-family:Times, serif;
-    padding-left:12px;
-    padding-right:12px;
-}
-
-.scroller {
-  height:10%;
-  overflow-y: scroll;
-  scrollbar-color: rebeccapurple white;
-  scrollbar-width: thin;
-}
-
-/** .mmm:focus{
-    color:green;
-}**/
-
-
-.monSpan{
-  opacity: 0;
-}
- .g_Card + .g_Card{
-    margin-left: 12px;
-    width: auto;
- }
-
-@import url('https://fonts;googleapis.com/css2?family=Lato&display=swap');
-*{
-    box-sizing:border-box;
-    margin: 0px;
-    padding:0px;
-    font-family:'Lato',sans-serif;
-}
-.ma-carrousse{
-    height:23vh;
-    background-color: #F0F8FF;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-}
-
-.MapContainer{
-    padding-right: 28px !important;
-}
-
-/* #basic-navbar-nav{
-    pading-right:0px;
-
-} */
-
-
-/* .d-photo{
-background-image:url("fond1.jpg");
-height:600px;
-} */
-.img_taille{
-
-    width: 30px !important;
-    height: 36vh;
-}
-
-.scrollable-menu:hover, .scrollable-menu:active  {
-    max-height: 80%;
-    overflow: hidden;
-    overflow-y: auto;
-    opacity:0px !important;
-    border-radius:3px;
-}
-
-.main{
-    background-color: white;
-    height: 100vh;
-
-}
-
-.main:hover{
-    opacity: 1;
-}
-
-.monButton:focus{
-    width:400px;
-    margin-left:30px;
-    color:grey
-}
-.monButton1{
-    width:400px;
-    margin-left:7px;
-}
-.home,.reports, .products{
-    display:flex;
-    height:90hv;
-    align-items:center;
-    justify-content:center;
-    font-size:3rem;
-}
-.codeCouleur{
-    background-color:#aaa!important;
-}
-
-.monNavBar{
-    height:10px;
-    display:flex;
-    justify-content:start;
-    align-items:center;
-    font-size:12px;
-}
-
-
-/** ma menu vertical début**/
-
-.menu-bars{
-    margin-left:2rem;
-    font-size:2rem;
-    background:none;
-
-}
-
-.nav-menu{
-    margin-left:0rem;
-    width:auto;
-    height:100%;
-    display:flex;
-    justify-content:start;
-    position:fixed;
-    top:0;
-    left:-100%;
-    transition:870ms;
-    box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.5);
-    background-color:white;
-    z-index:100;
-
-}
-
-.nav-menu.active{
-    left:0px;
-    transition:0ms;
-    border-right:0rem !important;
-}
-
-.nav-text{
-    display:flex;
-    justify-content:start;
-    align-items:center;
-    list-style:none;
-    color:grey
-
-}
-
-.nav-text.active{
-    border-bottom: 0px;
-    border-right: 4px solid #61dafb;
-}
-
-.nav-text a {
-    text-decoration:none;
-    color:black;
-    width:95%;
-    height:100%;
-    display:flex;
-    align-items:center;
-    padding: 0 0px;
-    border-radius:4px;
-
-
-}
-
-.nav-text:hover {
-    background-color:grey ;
-    color: white;
-}
-
-.nav-menu-items {
-    width:100%;
-}
-
-.navbar-toggle {
-    background-color:white;
-    width:100%;
-    height:55px;
-    display:flex;
-    justify-content:start;
-    align-items:center;
-    padding-bottom:5px;
-}
-
-span{
-    margin-left:16px;
-    margin-right:0px;
-}
-
-.menuVertical{
-    margin-left:100% !important ;
-    border-width : 0;
-}
-
-/** mon menu vertical  fin**/
-
-.monHeader{
-    background-color:white !important;
-}
-
-.search{
-    width:auto;
-    margin-left:auto;
-    margin-right:auto;
-}
-
-.maLink{
-    padding-right:10%;
-}
-
-.vertical{
-    background-color:rgba(0, 0, 0, 0.1),;
-}
-.f1{
-  margin-right: 50% ;
-  margin-left:0% ;
-  width: 100%;
-  height:3%;
-  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 50%;
-}
-
-.desCriptionCarte{
-    margin-left: auto;
-    margin-right: 2px;
-}
-
-.nav3 {
-   position: left;
-   display: inline-flex;
-   padding-left: 30px;
-}
-
-.Card{
-    padding:2px;
-    margin-bottom:12px;
-    margin-top:12px;
-    width: 50%;
-    margin-left: auto;
-    margin-left: auto;
-}
-
-.btn_connexion{
-    font-family:Georgia;
-    text-transform : none !important;
-    border-radius:10% !important;
-    padding-top:10px !important;
-    padding-bottom:10px !important;
-    padding-left: 2px !important;
-    padding-right: 10px !important;
-
-}
-
-.btn-all{
-    font-family:Georgia;
-    text-transform : none !important;
-    margin-left: 2px !important;
-    padding: 6px !important;
-}
-
-.btn_connexion:hover{
-    background-color:grey !important;
-}
-
-.mesButton{
-    width: auto;
-    opacity:1;
-    font-size: 12px;
-    font-family: Arial;
-    transform: scale(1);
-
-}
-
-.mesButton:hover{
-    width: auto;
-    color: black;
-    transform:scale(1) ;
-    box-shadow:  0 13px 23px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-    opacity: 2;
-    transition:.5s;
-}
-
-.c-item.active{
-    border: 0px;
-}
-
-.carousel-control-prev{
-    opacity: 0;
-}
-
-.carousel-control-next{
-    opacity: 0;
-}
-
-
-
-.carousel-indicators li{
-    background-color: grey;
-}
-
-.carousel-indicators li.active{
-    background-color: grey;
-    opacity: 0;
-}
-
-
-.sr-only{
-    background-color: grey;
-}
-
-
-span.aria-hidden{
-
-    border: 34px;
-}
-
-
-.img1{
-  border-radius: 50%;
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.2), 0 1px 2px 0 rgba(0, 0, 0, 0.2);
-}
-
-.tem{
-    padding:100px;
-}
-
-.App {
-  text-align: center;
-}
-
-.ma-carrousse:hover{
-    background-color: white;
-    transition: 3s;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-.Btn{
-    padding-left: 30px;
-   color: white !important;
-   width: 23px;
-}
-.nav_color{
-    background-color: white !important;
-}
-.formu2{
-  text-align: center;
-  padding-left:5%;
-  padding-right:5%;
-  background-color:black !important;
-  color:white !important;
-  /* font-color:white; */
-  font-size:14px;
-  color:white !important;
-
-}
-.formu1{
-  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.1);
-  text-align: center;
-  margin-top:0px;
-  padding-left:10%;
-  padding-right:10%;
-
-}
-.logo{
-  margin-right:10% ;
-  padding: 1px;
-  box-shadow:  0 13px 23px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 40%;
-  color:white !important;
-
-
-}
-
-.logoApp{
-  padding-top: 10px;
-  box-shadow:  0 13px 23px 0 rgba(0, 0, 0, 0.1), 0 1px 1px 0 rgba(0, 0, 0, 0.2);
-  border-radius: 30%;
-  transform:scale(0.8);
-
-}
-
-.na{
-  background-color: black;
-  padding-left: 1px;
-  padding-right: 30px;
-  padding-top: 2px;
-  padding-bottom: 2px;
-}
-
-.monPop{
-    padding-left:20% !important;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
-
-header {
-    width:100%;
-}
-
-.s_contact + .s_contact{
-    padding-left: 20%;
-}
-
-.NavLink{
-    text-decoration: none;
-}
-
-.navbar-item{
-    text-decoration: none;
-}
-
-a{
-    text-decoration: none;
-}
-
-.gfr{
-    text-decoration: none;
-}
-
-ul li{
-    list-style-type: none;
-}
-
-.content{
-    opacity:0;
-}
-
-.content:hover{
-    opacity:1 !important;
-}
-
-.box{
-
-	width: 500px;
-
-	background-color: #f2f2f2;
-
-	border-radius: 30px;
-
-	display: flex;
-
-	align-items: center;
-}
-
-.box > i {
-	font-size: 20px;
-	color: #777;
-}
-
-.button1{
-    border-radius:50%;
-    padding:10px;
-    color:blue
-
-}
-
-#p-scroller{
-    background-color: rgba(255, 255, 255, 1) !important;
-}
-
-#image_pop:hover{
-
-    background-color:grey;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0), 0 1px 1px 0 rgba(0, 0, 0, 0);
-    opacity: 0.9;
-}
-
-.img-rectangle {
-    clip-path:ellipse(33% 50%);
-}
-
-.img-carree {
-    border-radius: 50%;
-    height: 120px;
-    width: 120px;
-    margin: 0px;
-}
-.img-carreee {
-
-
-    border-radius: 50%;
-    height: 50px;
-    width: 50px;
-}
-
-.cursor-pointer{
-    cursor:pointer;
-}
-
-.scroll-container{
-    position: fixed;
-    top:0;
-    left:0;
-    width: 100%;
-    height: 5px;
-}
-
-.scroll-to-top{
-    position: fixed;
-    bottom: 10px;
-    left: 50%;
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    background-color: rgba(96, 114, 221, 0.767);
-    color: red;
-    z-index:22;
-    opacity: 3;
-}
-
-.scroll-to-bottom .icon, .scroll-to-top .icon{
-    margin-top:10px;
-    animation: scrollTop 0.5s alternate ease infinite;
-}
-
-@keyframes scrollTop {
-
-    from{
-        transform: translateY(2px);
-    }
-
-    to{
-        transform: translateY(-1px);
-    }
-}
-
-.scroll-to-bottom{
-    position: fixed;
-    top: 90px;
-    left: 50%;
-    width: 40px;
-    height: 40px;
-    border-radius: 100%;
-    background-color: rgba(96, 114, 221, 0.767);
-    color: rgb(204, 30, 30);
-    z-index:22;
-    opacity: 3;
-}
-
-@keyframes scroll-to-bottom {
-
-    from{
-        transform: translateY(2px);
-    }
-
-    to{
-        transform: translateY(-1px);
-    }
-}
-
-.carousel_info{
-    opacity: 0;
-}
-
-.carousel_info:hover{
-    opacity: 1;
-
-    animation: carousel_info 0.7s alternate ease ;
-}
-
-@keyframes carousel_info {
-    
-    from {
-        opacity: 0;
-    }
-
-    to{
-        opacity: 1;
-    }
-}
-
-.s_icon + .s_icon{
-    margin-left: auto !important;
-    padding-right: auto;
-
-}
-
-.s_icon  ~ .s_icon{
-    padding-left: auto !important;
-    margin-left: auto ;
-}
-
-div.sect_p{
-    display: block;
-    background-color:white;
-    border-radius: 20px;
-    box-shadow: 0.5px 0.5px 2px #aaaaaa;
-    /* overflow-y: scroll; */
-    scrollbar-width: 399px;
-    height: auto;
-  
-}
-
-.style_popup{
-    border-radius: 25px;
-}
-
-
-
-
-
