--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -73,6 +73,16 @@
         border: 0px;
         box-shadow:2px 2px 2px 2px rgba(2, 2, 255, .2);
     }
+
+    .off_classe{
+        text-align: center !important;
+        display: None;
+        flex-direction: row;
+        z-index:1 !important;
+        text-align: center;
+        padding-top: 10px;
+        padding-right: 12px;
+    }
 }
 /** fin grand  ecran **/
 
@@ -84,10 +94,20 @@
         background-color: #171212;
     }
 
+    .off_classe{
+        text-align: center !important;
+        display: flex;
+        flex-direction: row;
+        z-index:1 !important;
+        text-align: center;
+        padding-top: 10px;
+        padding-right: 12px;
+    }
+
     .style_css{
         text-align: center !important;
         height:0% !important;
-        display: flex;
+        display: None;
         flex-direction: row;
         z-index:1 !important;
         text-align: center;
