--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -110,7 +110,7 @@
         z-index:1 !important;
         text-align: center;
         padding-top: 10px;
-        padding-right: 12px;
+        /* padding-right: 12px; */
     }
 
     .style_css{
@@ -121,7 +121,7 @@
         z-index:1 !important;
         text-align: center;
         padding-top: 10px;
-        padding-left: 1%;
+        /* padding-left: 1%; */
     }
 
     .style_head + .vert_menu_footer{
