--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -18,6 +18,30 @@
     background-color: #0a0a0a;
 }
 
+.style_navlink{
+    padding: 10px !important;
+    color: aliceblue;
+}
+
+.home_d{
+    padding: 10px !important;
+}
+
+.header_ sticky-top{
+    padding-left: 20px;
+    padding-right: 20px;
+}
+
+.style_navlink:hover{
+    background-color: gray;
+    color:black;
+}
+
+
+/* link:active{
+    border-bottom: white;
+    margin-bottom: 12px;
+} */
 
 .accordion-button:not(.collapsed) {
     color:grey !important;
