--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -35,6 +35,7 @@
 .header_sticky-top{
     padding-left: 20px;
     padding-right: 20px;
+    z-index: 2;
 }
 
 .style_navlink:hover{
@@ -91,7 +92,7 @@
 }
 
 .nav-footer{
-    z-index: 30000;
+    z-index: 300 !important;
 }
 
 
@@ -118,7 +119,7 @@
 
 
     .style_css{
-        z-index: 10000;
+        z-index: 1;
         width: 200px;
         height: 100%;
         background-color:white;
