--- a/my-react-app/src/style.css
+++ b/my-react-app/src/style.css
@@ -92,7 +92,7 @@
 }
 
 .nav-footer{
-    z-index: 300 !important;
+    z-index: 1!important;
 }
 
 
@@ -117,9 +117,13 @@
         z-index:200;
     }
 
+    .style_css + .nav-footer{
+        margin-left: 12px;
+    }
+
 
     .style_css{
-        z-index: 1;
+        z-index: 0;
         width: 200px;
         height: 100%;
         background-color:white;
